Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -915,6 +915,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>More consistent client development guidelines (casing of parameter names). <a href="https://github.com/Open-EO/openeo-api/issues/124">#124</a></li>
 <li><code>mime_type</code> replaced with <code>media_type</code> in the process catalogue input parameters and return values.</li>
 <li>The schema for <code>exceptions</code> defined in process descriptions (<code>GET /processes</code>) follows the general schema for openEO errors.</li>
+<li>The <code>name</code> property of processes has changed its name to <code>id</code> for consistency.</li>
 </ul>
 <h3 id="removed">Removed</h3>
 <ul>
