--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -908,7 +908,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <h2 id="040-unreleased">[0.4.0] - Unreleased</h2>
 <h3 id="added">Added</h3>
 <ul>
-<li>...</li>
+<li><code>GET /jobs/{job_id}/estimate</code> can return the estimated required storage capacity. <a href="https://github.com/Open-EO/openeo-api/issues/122">#122</a></li>
 </ul>
 <h3 id="changed">Changed</h3>
 <ul>
@@ -917,7 +917,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>The schema for <code>exceptions</code> defined in process descriptions (<code>GET /processes</code>) follows the general schema for openEO errors.</li>
 <li>The <code>name</code> property of processes has changed its name to <code>id</code> for consistency. <a href="https://github.com/Open-EO/openeo-api/issues/130">#130</a></li>
 <li>The <code>name</code> property of files has changed its name to <code>path</code> for consistency. <a href="https://github.com/Open-EO/openeo-api/issues/133">#133</a></li>
-<li>Process graph validation (<code>POST /validation</code>) returns HTTP status code 200 for valid and invalid process graphs and responds with a list of errors. <a href="https://github.com/Open-EO/openeo-api/issues/144">#144</a></li>
+<li><code>POST /validation</code> returns HTTP status code 200 for valid and invalid process graphs and responds with a list of errors. <a href="https://github.com/Open-EO/openeo-api/issues/144">#144</a></li>
 </ul>
 <h3 id="removed">Removed</h3>
 <ul>
