--- a/v/0.4.0/processreference/index.html
+++ b/v/0.4.0/processreference/index.html
@@ -6,14 +6,13 @@
     <link rel="shortcut icon" href="../assets/images/favicon.png">
     <title>openEO API Processes</title>
     <link rel="stylesheet" href="../assets/stylesheets/application.451f80e5.css">
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono">
     <style>
       body,input{font-family:"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif}
       code,kbd,pre{font-family:"Roboto Mono","Courier New",Courier,monospace}
+      .anchor {position: relative; display: block; top: -4.8rem; visibility: hidden}
     </style>
     <link rel="stylesheet" href="../assets/fonts/material-icons.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/@openeo/processes-docgen/dist/DocGen.umd.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/@openeo/processes-docgen/dist/DocGen.css">
@@ -75,13 +74,16 @@
       </nav>
     </header>
     <div class="md-container">
-      <main class="md-main" id="content"></main>
+      <main class="md-main" id="content">
+        <div id="app"></div>
+      </main>
     </div>
     <script>
-      window.processesDocument = '../processes.json';
       new Vue({
-        render: h => h(DocGen)
-      }).$mount('#content')
+        el: '#app',
+        render: h => h(DocGen),
+	      document: '../processes.json',
+      });
     </script>
     <noscript>Sorry, the documentation generator requires JavaScript to be enabled!</noscript>
   </body>
