--- a/v/0.3.1/apireference/index.html
+++ b/v/0.3.1/apireference/index.html
@@ -6,11 +6,11 @@
     <link rel="shortcut icon" href="../assets/images/favicon.png">
     <title>openEO API Reference</title>
     <link rel="stylesheet" href="../assets/stylesheets/application.451f80e5.css">
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono">
     <style>
       body,input{font-family:"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif}
       code,kbd,pre{font-family:"Roboto Mono","Courier New",Courier,monospace}
+      .md-header-nav__button.md-logo {display: inline-block}
     </style>
     <link rel="stylesheet" href="../assets/fonts/material-icons.css">
   </head>
@@ -36,9 +36,6 @@
         </svg>
       </defs>
     </svg>
-    <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer" autocomplete="off">
-    <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search" autocomplete="off">
-    <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
     <header class="md-header" data-md-component="header" data-md-state="shadow">
       <nav class="md-header-nav md-grid">
         <div class="md-flex">
@@ -46,9 +43,6 @@
             <a href="../" title="openEO API Reference" class="md-header-nav__button md-logo">
             <i class="md-icon"></i>
             </a>
-          </div>
-          <div class="md-flex__cell md-flex__cell--shrink">
-            <label class="md-icon md-icon--menu md-header-nav__button" for="__drawer"></label>
           </div>
           <div class="md-flex__cell md-flex__cell--stretch">
             <div class="md-flex__ellipsis md-header-nav__title" data-md-component="title" data-md-state="">
