--- a/v/0.3.1/processreference/index.html
+++ b/v/0.3.1/processreference/index.html
@@ -10,7 +10,6 @@
     <style>
       body,input{font-family:"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif}
       code,kbd,pre{font-family:"Roboto Mono","Courier New",Courier,monospace}
-      .md-header-nav__button.md-logo {display: inline-block}
       .anchor {position: relative; display: block; top: -4.8rem; visibility: hidden}
     </style>
     <link rel="stylesheet" href="../assets/fonts/material-icons.css">
@@ -40,6 +39,9 @@
         </svg>
       </defs>
     </svg>
+    <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer" autocomplete="off">
+    <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search" autocomplete="off">
+    <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
     <header class="md-header" data-md-component="header" data-md-state="shadow">
       <nav class="md-header-nav md-grid">
         <div class="md-flex">
@@ -47,6 +49,9 @@
             <a href="../" title="openEO API Processes" class="md-header-nav__button md-logo">
             <i class="md-icon"></i>
             </a>
+          </div>
+          <div class="md-flex__cell md-flex__cell--shrink">
+            <label class="md-icon md-icon--menu md-header-nav__button" for="__drawer"></label>
           </div>
           <div class="md-flex__cell md-flex__cell--stretch">
             <div class="md-flex__ellipsis md-header-nav__title" data-md-component="title" data-md-state="">
