Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/cors/index.html
+++ b/v/0.4.0/cors/index.html
@@ -790,7 +790,7 @@ CORS defines a way in which a browser and server can interact to determine wheth
 </tr>
 <tr>
 <td>Access-Control-Expose-Headers</td>
-<td>Some endpoints send non-safelisted HTTP response headers such as <code>OpenEO-Identifier</code> and <code>OpenEO-Costs</code>. All headers except <code>Cache-Control</code>, <code>Content-Language</code>, <code>Content-Type</code>, <code>Expires</code>, <code>Last-Modified</code> and <code>Pragme</code> must be listed in this header. Currently, the openEO API requires at least the following headers to be listed: <code>OpenEO-Identifier, OpenEO-Costs</code>.</td>
+<td>Some endpoints send non-safelisted HTTP response headers such as <code>OpenEO-Identifier</code> and <code>OpenEO-Costs</code>. All headers except <code>Cache-Control</code>, <code>Content-Language</code>, <code>Content-Type</code>, <code>Expires</code>, <code>Last-Modified</code> and <code>Pragma</code> must be listed in this header. Currently, the openEO API requires at least the following headers to be listed: <code>OpenEO-Identifier, OpenEO-Costs</code>.</td>
 <td><code>OpenEO-Identifier, OpenEO-Costs</code></td>
 </tr>
 <tr>
@@ -841,7 +841,7 @@ CORS defines a way in which a browser and server can interact to determine wheth
 </tr>
 <tr>
 <td>Access-Control-Expose-Headers</td>
-<td>Some endpoints send non-safelisted HTTP response headers such as <code>OpenEO-Identifier</code> and <code>OpenEO-Costs</code>. All headers except <code>Cache-Control</code>, <code>Content-Language</code>, <code>Content-Type</code>, <code>Expires</code>, <code>Last-Modified</code> and <code>Pragme</code> must be listed in this header. Currently, the openEO API requires at least the following headers to be listed: <code>OpenEO-Identifier, OpenEO-Costs</code>.</td>
+<td>Some endpoints send non-safelisted HTTP response headers such as <code>OpenEO-Identifier</code> and <code>OpenEO-Costs</code>. All headers except <code>Cache-Control</code>, <code>Content-Language</code>, <code>Content-Type</code>, <code>Expires</code>, <code>Last-Modified</code> and <code>Pragma</code> must be listed in this header. Currently, the openEO API requires at least the following headers to be listed: <code>OpenEO-Identifier, OpenEO-Costs</code>.</td>
 <td><code>OpenEO-Identifier, OpenEO-Costs</code></td>
 </tr>
 </tbody>
