--- a/v/0.4.0/processreference/index.html
+++ b/v/0.4.0/processreference/index.html
@@ -70,21 +70,18 @@
         </div>
       </nav>
     </header>
-    <div class="md-container">
-      <main class="md-main" id="content">
-        <div id="app"></div>
-      </main>
+    <div id="container">
+      <div id="app"></div>
     </div>
     <script>
-      new Vue({
-        el: '#app',
-        render: h => h(DocGen, {
-          props: {
-            document: '../processes.json',
-            categorize: true
-          }
+    new Vue({
+      el: '#app',
+      render: h => h(DocGen, {
+        props: {
+          document: '../processes.json',
+          categorize: true
         }
-      )
+      })
     });
     </script>
     <noscript>Sorry, the documentation generator requires JavaScript to be enabled!</noscript>
