Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -934,6 +934,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>The <code>name</code> property of processes has changed to <code>id</code>. <a href="https://github.com/Open-EO/openeo-api/issues/130">#130</a></li>
 <li><code>mime_type</code> replaced with <code>media_type</code> in the input parameters and return values.</li>
 <li>The schema for <code>exceptions</code> follows the general schema for openEO errors. <a href="https://github.com/Open-EO/openeo-api/issues/139">#139</a></li>
+<li>Changed the structure of <code>examples</code>.</li>
 </ul>
 </li>
 </ul>
