Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -911,12 +911,16 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <ul>
 <li><code>GET /jobs/{job_id}/estimate</code> can return the estimated required storage capacity. <a href="https://github.com/Open-EO/openeo-api/issues/122">#122</a></li>
 <li><code>GET /jobs/{job_id}</code> has a property <code>progress</code> to indicate the progress. <a href="https://github.com/Open-EO/openeo-api/issues/82">#82</a></li>
-<li>Processes can be categorizes with the <code>category</code> property.</li>
 <li><code>GET /.well-known/openeo</code> allows clients to choose between versions. <a href="https://github.com/Open-EO/openeo-api/issues/148">#148</a></li>
 <li><code>GET /</code> (Capabilities):<ul>
 <li>Requires to return a title (<code>title</code>), a description (<code>description</code>) and the back-end version (<code>backend_version</code>). <a href="https://github.com/Open-EO/openeo-api/issues/154">#154</a></li>
 <li>Billing plans have an additional required property <code>paid</code>. <a href="https://github.com/Open-EO/openeo-api/issues/157">#157</a></li>
 <li>Should provide a link to the Well-Known URI in the new <code>links</code> property.</li>
+</ul>
+</li>
+<li><code>GET /processes</code> (Process discovery):<ul>
+<li>Processes can be categorizes with the <code>category</code> property.</li>
+<li>Parameters can be ordered with the <code>parameter_order</code> property instead of having a random order.</li>
 </ul>
 </li>
 </ul>
