Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/processes/index.html
+++ b/v/0.4.0/processes/index.html
@@ -764,11 +764,11 @@
 <tbody>
 <tr>
 <td><code>date</code></td>
-<td>Date only representation, as defined as <code>full-date</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339, section 5.6</a>.</td>
+<td>Date only representation, as defined for <code>full-date</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>. The time zone is UTC.</td>
 </tr>
 <tr>
 <td><code>date-time</code></td>
-<td>Date and time representation, as defined as <code>date-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339, section 5.6</a>.</td>
+<td>Date and time representation, as defined for <code>date-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>.</td>
 </tr>
 <tr>
 <td><code>image-collection</code></td>
@@ -776,7 +776,7 @@
 </tr>
 <tr>
 <td><code>time</code></td>
-<td>Time only representation, as defined as <code>full-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339, section 5.6</a>.</td>
+<td>Time only representation, as defined for <code>full-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>.</td>
 </tr>
 <tr>
 <td><code>vector-collection</code></td>
