Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/processes/index.html
+++ b/v/0.4.0/processes/index.html
@@ -771,16 +771,16 @@
 <td>Date and time representation, as defined for <code>date-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>.</td>
 </tr>
 <tr>
-<td><code>image-collection</code></td>
-<td>Raster collection, a proprietary way to describe a raster data cube.</td>
+<td><code>raster-cube</code></td>
+<td>A raster data cube, an image collection stored at the back-end. Different back-ends have different internal representations for this data structure.</td>
 </tr>
 <tr>
 <td><code>time</code></td>
 <td>Time only representation, as defined for <code>full-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>.</td>
 </tr>
 <tr>
-<td><code>vector-collection</code></td>
-<td>Vector collection, a proprietary way to describe a vector data cube.</td>
+<td><code>vector-cube</code></td>
+<td>A vector data cube, a vector collection stored at the back-end. Different back-ends have different internal representations for this data structure</td>
 </tr>
 </tbody>
 </table>
