Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -921,7 +921,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li><code>GET /processes</code> (Process discovery):<ul>
 <li>Processes can be categorizes with the <code>category</code> property.</li>
 <li>Parameters can be ordered with the <code>parameter_order</code> property instead of having a random order.</li>
-<li>References to other processes in descriptions can be done with <code>@process_id</code>.</li>
+<li>Support for references to other processes in descriptions.</li>
 </ul>
 </li>
 </ul>
