Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/processes/index.html
+++ b/v/0.4.0/processes/index.html
@@ -763,12 +763,20 @@
 </thead>
 <tbody>
 <tr>
+<td><code>callback</code></td>
+<td>An openEO process graph that is passed as an argument and is expected to be execute by the process.</td>
+</tr>
+<tr>
 <td><code>date</code></td>
 <td>Date only representation, as defined for <code>full-date</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>. The time zone is UTC.</td>
 </tr>
 <tr>
 <td><code>date-time</code></td>
 <td>Date and time representation, as defined for <code>date-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>.</td>
+</tr>
+<tr>
+<td><code>geojson</code></td>
+<td>GeoJSON as defined by <a href="https://tools.ietf.org/html/rfc7946">RFC 7946</a>. <a href="https://github.com/geojson/schema">JSON Schemas for validation are available.</a></td>
 </tr>
 <tr>
 <td><code>raster-cube</code></td>
