Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -935,6 +935,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>The <code>status</code> property of jobs is now required. </li>
 <li><code>POST /validation</code> returns HTTP status code 200 for valid and invalid process graphs and responds with a list of errors. <a href="https://github.com/Open-EO/openeo-api/issues/144">#144</a></li>
 <li><code>version</code> in response of <code>GET /</code> renamed to <code>api_version</code>.</li>
+<li>Endpoint paths in <code>GET /</code> must follow the openAPI specification. <a href="https://github.com/Open-EO/openeo-api/issues/128">#128</a></li>
 <li>Added authentication information where missing and allowed to call <code>POST /validation</code> without authentication. <a href="https://github.com/Open-EO/openeo-api/issues/151">#151</a></li>
 <li>Improved client development guidelines. <a href="https://github.com/Open-EO/openeo-api/issues/124">#124</a></li>
 <li><code>GET /processes</code> (Process discovery):<ul>
