--- a/v/0.4.0/processes/index.html
+++ b/v/0.4.0/processes/index.html
@@ -784,7 +784,7 @@
 </tr>
 <tr>
 <td><code>time</code></td>
-<td>Time only representation, as defined for <code>full-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>.</td>
+<td>Time only representation, as defined for <code>full-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>. Although <a href="https://tools.ietf.org/html/rfc3339#section-5.7">RFC 3339 prohibits the hour to be '24'</a>, this definition allows the value '24' for the hour as end time in an interval in order to make it possible that left-closed time intervals can fully cover the day.</td>
 </tr>
 <tr>
 <td><code>vector-cube</code></td>
