Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/processes/index.html
+++ b/v/0.4.0/processes/index.html
@@ -783,6 +783,10 @@
 <td>A raster data cube, an image collection stored at the back-end. Different back-ends have different internal representations for this data structure.</td>
 </tr>
 <tr>
+<td><code>temporal-intervals</code></td>
+<td>An array of two-element arrays, which contains temporal left-closed intervals. For more information see the parameter <code>intervals</code> in the process <code>aggregate_temporal</code>.</td>
+</tr>
+<tr>
 <td><code>time</code></td>
 <td>Time only representation, as defined for <code>full-time</code> by <a href="https://tools.ietf.org/html/rfc3339#section-5.6">RFC 3339 in section 5.6</a>. Although <a href="https://tools.ietf.org/html/rfc3339#section-5.7">RFC 3339 prohibits the hour to be '24'</a>, this definition allows the value '24' for the hour as end time in an interval in order to make it possible that left-closed time intervals can fully cover the day.</td>
 </tr>
