--- a/v/0.4.0/processreference.html
+++ b/v/0.4.0/processreference.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../img/header.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono">
     <link rel="stylesheet" href="../assets/fonts/material-icons.css">
-    <script src="https://unpkg.com/vue"></script>
-    <script src="https://unpkg.com/@openeo/processes-docgen@0.5/dist/DocGen.umd.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/@openeo/processes-docgen@0.5/dist/DocGen.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@openeo/processes-docgen@0.5/dist/DocGen.umd.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@openeo/processes-docgen@0.5/dist/DocGen.css">
     <style>
       html, body { margin: 0; }
       #container {
