Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -918,6 +918,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li><code>GET /</code> (Capabilities):<ul>
 <li>Requires to return a title (<code>title</code>), a description (<code>description</code>) and the back-end version (<code>backend_version</code>). <a href="https://github.com/Open-EO/openeo-api/issues/154">#154</a></li>
 <li>Billing plans have an additional required property <code>paid</code>. <a href="https://github.com/Open-EO/openeo-api/issues/157">#157</a></li>
+<li>Billing plan descriptions allow CommonMark. <a href="https://github.com/Open-EO/openeo-api/issues/164">#164</a></li>
 <li>Should provide a link to the Well-Known URI in the new <code>links</code> property.</li>
 </ul>
 </li>
