Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -942,7 +942,8 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>Billing plan descriptions allow CommonMark. <a href="https://github.com/Open-EO/openeo-api/issues/164">#164</a></li>
 </ul>
 </li>
-<li><code>/files/{user_id}/{path}</code> File management: <ul>
+<li><code>/files/{user_id}/{path}</code> File management:<ul>
+<li>Clarified handling of folders. <a href="https://github.com/Open-EO/openeo-api/issues/146">#146</a></li>
 <li><code>GET</code> method: The <code>name</code> property was renamed to <code>path</code>. <a href="https://github.com/Open-EO/openeo-api/issues/133">#133</a></li>
 <li><code>PUT</code> method: Returns file meta data with a different response code. <a href="https://github.com/Open-EO/openeo-api/issues/163">#163</a></li>
 </ul>
