Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/gettingstarted-backends/index.html
+++ b/v/0.4.0/gettingstarted-backends/index.html
@@ -678,13 +678,13 @@
 <li><a href="https://github.com/Open-EO/openeo-python-driver">Python Driver</a></li>
 <li><a href="https://github.com/Open-EO/openeo-nodejs-driver">NodeJS Driver</a></li>
 </ul>
-<p>You can implement a back-end in iterations. It is recommended to start by implementing the <a href="../apireference/#tag/Capabilities">Capabilities</a> microservice. <a href="../apireference/#tag/EO-Data-Discovery">EO Data Discovery</a>, <a href="../apireference/#tag/Process-Discovery">Process Discovery</a> are important for the client libraries to be available, too. Afterwards you should implement <a href="../apireference/#tag/Job-Management">Job Management</a> or <a href="../apireference/#/paths/~1preview/post">synchronous data processing</a>. All other microservices can be added later and are not strictly required to run openEO services. Keep in mind that you don't need to implement all endpoints in the first iteration and that you can specify in the Capabilities, which endpoints you are supporting.</p>
+<p>You can implement a back-end in iterations. It is recommended to start by implementing the <a href="../apireference/#tag/Capabilities">Capabilities</a> microservice. <a href="../apireference/#tag/EO-Data-Discovery">EO Data Discovery</a>, <a href="../apireference/#tag/Process-Discovery">Process Discovery</a> are important for the client libraries to be available, too. Afterwards you should implement <a href="../apireference/#tag/Job-Management">Job Management</a> or <a href="../apireference/#/paths/~1result/post">synchronous data processing</a>. All other microservices can be added later and are not strictly required to run openEO services. Keep in mind that you don't need to implement all endpoints in the first iteration and that you can specify in the Capabilities, which endpoints you are supporting.</p>
 <p>For example, you could start by implementing the following endpoints in the first iteration:</p>
 <ul>
 <li>Capabilities: <code>GET /</code> and <code>GET /output_formats</code></li>
 <li>Data discovery: <code>GET /collections</code> and <code>GET /collections/{name}</code></li>
 <li>Process discovery: <code>GET /processes</code></li>
-<li>Data processing: <code>POST /preview</code></li>
+<li>Data processing: <code>POST /result</code></li>
 <li>Authentication (if required): <code>GET /credentials/basic</code></li>
 </ul>
 <p>Afterwards you can already start experimenting with your first process graphs and process EO data with our client libraries on your back-end.</p>
