--- a/v/0.4.0/guidelines-clients/index.html
+++ b/v/0.4.0/guidelines-clients/index.html
@@ -1176,7 +1176,7 @@
 </tr>
 <tr>
 <td>Executes a process graph synchronously.</td>
-<td><code>POST /preview</code></td>
+<td><code>POST /result</code></td>
 <td><code>computeResult(processGraph, ?outputFormat, ?outputParameters, ?budget)</code></td>
 </tr>
 <tr>
