Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/arch/index.html
+++ b/v/0.4.0/arch/index.html
@@ -706,8 +706,8 @@
 <td>Discovery and execution of user-defined functions.</td>
 </tr>
 <tr>
-<td>Job Management</td>
-<td>Organizes and manages jobs that run processes on back-ends.</td>
+<td>Batch Job Management</td>
+<td>Organizes and manages batch jobs that run processes on back-ends.</td>
 </tr>
 <tr>
 <td>File Management</td>
