--- a/v/0.4.0/processgraphs/index.html
+++ b/v/0.4.0/processgraphs/index.html
@@ -845,14 +845,13 @@ A process node MUST always contain key-value-pairs named <code>process_id</code>
 <div class="codehilite"><pre><span></span>&lt;ArgumentValue&gt; := &lt;string|number|boolean|null|array|object|Callback|CallbackParameter|Result|Variable&gt;
 </pre></div>
 
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-</div>
-<p>​    The specified data types except <code>Callback</code>, <code>CallbackParameter</code>, <code>Result</code> and <code>Variable</code> are the native data types supported by JSON.
-    Limitations apply as objects are not allowed to have keys with the following names:
-​        * <code>variable_id</code>, except for objects of type <code>Variable</code>
-​        * <code>from_argument</code>, except for objects of type <code>CallbackParameter</code>
-​        * <code>from_node</code>, except for objects of type <code>Result</code></p>
+<p><strong>Note</strong>: The specified data types except <code>Callback</code>, <code>CallbackParameter</code>, <code>Result</code> and <code>Variable</code> are the native data types supported by JSON. Limitations apply as objects are not allowed to have keys with the following names:</p>
+<div class="codehilite"><pre><span></span>* `variable_id`, except for objects of type `Variable`
+* `from_argument`, except for objects of type `CallbackParameter`
+</pre></div>
+
+
+<p>​    * <code>from_node</code>, except for objects of type <code>Result</code></p>
 <p><code>&lt;Result&gt;</code> is simply an object with a key <code>from_node</code> with a <code>&lt;ProcessNodeIdentifier&gt;</code> as value, which tells the back-end that the process expects the result (i.e. the return value) from another node to be passed as argument:</p>
 <div class="codehilite"><pre><span></span>&lt;Result&gt; := {
   &quot;from_node&quot;: &lt;ProcessNodeIdentifier&gt;
