Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/processgraphs/index.html
+++ b/v/0.4.0/processgraphs/index.html
@@ -846,12 +846,11 @@ A process node MUST always contain key-value-pairs named <code>process_id</code>
 </pre></div>
 
 <p><strong>Note</strong>: The specified data types except <code>Callback</code>, <code>CallbackParameter</code>, <code>Result</code> and <code>Variable</code> are the native data types supported by JSON. Limitations apply as objects are not allowed to have keys with the following names:</p>
-<div class="codehilite"><pre><span></span>* `variable_id`, except for objects of type `Variable`
-* `from_argument`, except for objects of type `CallbackParameter`
-</pre></div>
-
-
-<p>​    * <code>from_node</code>, except for objects of type <code>Result</code></p>
+<ul>
+<li><code>variable_id</code>, except for objects of type <code>Variable</code></li>
+<li><code>from_argument</code>, except for objects of type <code>CallbackParameter</code></li>
+<li><code>from_node</code>, except for objects of type <code>Result</code></li>
+</ul>
 <p><code>&lt;Result&gt;</code> is simply an object with a key <code>from_node</code> with a <code>&lt;ProcessNodeIdentifier&gt;</code> as value, which tells the back-end that the process expects the result (i.e. the return value) from another node to be passed as argument:</p>
 <div class="codehilite"><pre><span></span>&lt;Result&gt; := {
   &quot;from_node&quot;: &lt;ProcessNodeIdentifier&gt;
