Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/arch/index.html
+++ b/v/0.4.0/arch/index.html
@@ -687,7 +687,7 @@
 </tr>
 <tr>
 <td>EO Data Discovery</td>
-<td>Describes which datasets and image collections are available at the back-end.</td>
+<td>Describes which collections are available at the back-end.</td>
 </tr>
 <tr>
 <td>Process Discovery</td>
