Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/glossary/index.html
+++ b/v/0.4.0/glossary/index.html
@@ -904,7 +904,7 @@ and values:</p>
 </tbody>
 </table>
 <p>dimensions x and time are aligned along the x-axis; y and band are aligned along the y-axis.</p>
-<p><img alt="" src="https://github.com/edzer/openeo-api/raw/0.4.0/docs/fig2.png" /></p>
+<p><img alt="Data cube example" src="../img/datacube-example.png" /></p>
 <p>Data cubes as defined here have a <em>single value</em> (scalar) for each
 unique combination of dimension values.  The value pointed to by
 arrows corresponds to the combination of x=288847.5 (red arrow),
