--- a/v/0.4.0/collections/index.html
+++ b/v/0.4.0/collections/index.html
@@ -821,7 +821,7 @@ Therefore, it is very likely that further changes and adjustments will be made i
 <p>STAC has several <a href="https://github.com/radiantearth/stac-spec/tree/v0.6.2/extensions">extensions</a> that can be used to better describe your data. Clients and server are not required to implement all of them, so be aware that some clients may not be able to read all your meta data.</p>
 <p>Some commonly used extensions that are integrated in the openEO API specification are:</p>
 <ul>
-<li>EO extension</li>
+<li>EO (Electro-Optical) extension</li>
 <li>SAR extension</li>
 <li>Commons extension</li>
 <li>Scientific extension</li>
