--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -933,7 +933,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>Numeric openEO error codes. Replaced in responses with textual error codes. <a href="https://github.com/Open-EO/openeo-api/issues/139">#139</a></li>
 <li>Query parameters to replace process graph variables in <code>GET /process_graphs/{process_graph_id}</code>. <a href="https://github.com/Open-EO/openeo-api/issues/147">#147</a></li>
 <li><code>min_parameters</code> and <code>dependencies</code> for parameters in process descriptions returned by <code>GET /processes</code>.</li>
-<li>Replaced output format properties in favor of an export process, which has resulted in in the removal of:</li>
+<li>Replaced output format properties in favor of a <code>save_result</code> process, which has resulted in in the removal of:</li>
 <li>The default output format in <code>GET /output_formats</code>. <a href="https://github.com/Open-EO/openeo-api/issues/153">#153</a></li>
 <li>The output format properties in <code>POST /result</code> (fka <code>POST /preview</code>), <code>POST /jobs</code>, <code>PATCH /jobs</code> and <code>GET /jobs/{job_id}</code> requests. <a href="https://github.com/Open-EO/openeo-api/issues/153">#153</a></li>
 <li><code>gis_data_type</code> (not to be confused with <code>gis_data_types</code>) in the parameters of output formats in <code>GET /output_formats</code></li>
