--- a/v/0.4.0/processgraphs/index.html
+++ b/v/0.4.0/processgraphs/index.html
@@ -955,8 +955,8 @@ A process node MUST always contain key-value-pairs named <code>process_id</code>
       <span class="p">}</span>
     <span class="p">}</span>
   <span class="p">},</span>
-  <span class="nt">&quot;export&quot;</span><span class="p">:</span> <span class="p">{</span>
-    <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;export&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;save&quot;</span><span class="p">:</span> <span class="p">{</span>
+    <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;save_result&quot;</span><span class="p">,</span>
     <span class="nt">&quot;arguments&quot;</span><span class="p">:</span> <span class="p">{</span>
       <span class="nt">&quot;data&quot;</span><span class="p">:</span> <span class="p">{</span><span class="nt">&quot;from_node&quot;</span><span class="p">:</span> <span class="s2">&quot;mintime&quot;</span><span class="p">},</span>
       <span class="nt">&quot;format&quot;</span><span class="p">:</span> <span class="s2">&quot;GTiff&quot;</span>
