Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -921,7 +921,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 </ul>
 </li>
 <li><code>POST /validation</code> (Process graph validation):<ul>
-<li>Returns HTTP status code 200 for valid and invalid process graphs and responds with a list of errors. [#144]</li>
+<li>Returns HTTP status code 200 for valid and invalid process graphs and responds with a list of errors. <a href="https://github.com/Open-EO/openeo-api/issues/144">#144</a></li>
 <li>Allowed to call the endpoint without authentication. <a href="https://github.com/Open-EO/openeo-api/issues/151">#151</a></li>
 </ul>
 </li>
