--- a/v/0.4.1/processes/index.html
+++ b/v/0.4.1/processes/index.html
@@ -750,6 +750,11 @@
 </thead>
 <tbody>
 <tr>
+<td><code>band-name</code></td>
+<td>string</td>
+<td>A band name available in the data cube.</td>
+</tr>
+<tr>
 <td><code>bounding-box</code></td>
 <td>object</td>
 <td>A bounding box with the required fields <code>west</code>, <code>south</code>, <code>east</code>, <code>north</code> and optionally <code>base</code>, <code>height</code>, <code>crs</code>. The <code>crs</code> is a EPSG code or PROJ definition.</td>
