Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.1/guidelines-clients/index.html
+++ b/v/0.4.1/guidelines-clients/index.html
@@ -1133,7 +1133,7 @@
 <tr>
 <td>Executes a process graph synchronously.</td>
 <td><code>POST /result</code></td>
-<td><code>computeResult(processGraph, ?outputFormat, ?outputParameters, ?budget)</code></td>
+<td><code>computeResult(processGraph, ?plan, ?budget)</code></td>
 </tr>
 <tr>
 <td>Lists all jobs of the authenticated user. Returns a list of <code>Job</code>.</td>
@@ -1143,7 +1143,7 @@
 <tr>
 <td>Creates a new job. Returns a <code>Job</code>.</td>
 <td><code>POST /jobs</code></td>
-<td><code>createJob(processGraph, ?outputFormat, ?outputParameters, ?title, ?description, ?plan, ?budget, ?additional)</code></td>
+<td><code>createJob(processGraph, ?title, ?description, ?plan, ?budget, ?additional)</code></td>
 </tr>
 <tr>
 <td>Get all information about a job. Returns a <code>Job</code>.</td>
@@ -1280,7 +1280,7 @@
 <tr>
 <td>Modify a job at the back-end.</td>
 <td><code>PATCH /jobs/{job_id}</code></td>
-<td><code>updateJob(?processGraph, ?outputFormat, ?outputParameters, ?title, ?description, ?plan, ?budget, ?additional)</code></td>
+<td><code>updateJob(?processGraph, ?title, ?description, ?plan, ?budget, ?additional)</code></td>
 </tr>
 <tr>
 <td>Delete a job</td>
