Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.1/guidelines-clients/index.html
+++ b/v/0.4.1/guidelines-clients/index.html
@@ -1031,7 +1031,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Connect to a back-end, including authentication. Returns <code>Connection</code>.</td>
+<td>Connect to a back-end, including version discovery (<code>GET /well-known/openeo</code>) and authentication. Returns <code>Connection</code>.</td>
 <td><code>connect(url, ?authType, ?authOptions)</code></td>
 </tr>
 <tr>
@@ -1069,6 +1069,11 @@
 <td>List the supported secondary service types.</td>
 <td><code>GET /service_types</code></td>
 <td><code>listServiceTypes()</code></td>
+</tr>
+<tr>
+<td>List the supported UDF runtimes.</td>
+<td><code>GET /udf_runtimes</code></td>
+<td><code>listUdfRuntimes()</code></td>
 </tr>
 <tr>
 <td>List all collections available on the back-end.</td>
@@ -1112,7 +1117,7 @@
 </tr>
 <tr>
 <td>Validates a process graph.</td>
-<td><code>POST /validate</code></td>
+<td><code>POST /validation</code></td>
 <td><code>validateProcessGraph(processGraph)</code></td>
 </tr>
 <tr>
@@ -1128,7 +1133,7 @@
 <tr>
 <td>Get all information about a stored process graph. Returns a <code>ProcessGraph</code>.</td>
 <td><code>GET /process_graphs/{process_graph_id}</code></td>
-<td><code>getJobById(id)</code></td>
+<td><code>getProcessGraphById(id)</code></td>
 </tr>
 <tr>
 <td>Executes a process graph synchronously.</td>
