--- a/draft/changelog/index.html
+++ b/draft/changelog/index.html
@@ -999,6 +999,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <ul>
 <li>Improved documentation with several clarifications, better examples and more.</li>
 <li>SAR Bands had a required but undefined property. <a href="https://github.com/Open-EO/openeo-api/issues/187">#187</a></li>
+<li>Clarified how file paths in the URL must be encoded for file handling.</li>
 <li>OpenAPI <code>nullable</code> issues:</li>
 <li>Removed <code>null</code> from SAR Bands <code>enum</code> for OpenAPI code generator, is handled by <code>nullable</code>. <a href="https://github.com/OAI/OpenAPI-Specification/issues/1900">OpenAPI-Specification#1900</a></li>
 <li><code>nullable</code> doesn't combine well with <code>anyOf</code>, <code>allOf</code> and <code>oneOf</code>, therefore placed <code>nullable</code> also in one of the sub-schemas.  <a href="https://github.com/OAI/OpenAPI-Specification/issues/1368">OpenAPI-Specification#1368</a></li>
