Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/guidelines-clients/index.html
+++ b/draft/guidelines-clients/index.html
@@ -1086,6 +1086,11 @@
 <td><code>authenticateBasic(username, password)</code></td>
 </tr>
 <tr>
+<td>Logout / Close session for the authenticated user</td>
+<td><em>Depends on authentication method</em></td>
+<td><code>logout()</code></td>
+</tr>
+<tr>
 <td>Get information about the authenticated user.</td>
 <td><code>GET /me</code></td>
 <td><code>describeAccount()</code></td>
