Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/gettingstarted-backends/index.html
+++ b/draft/gettingstarted-backends/index.html
@@ -623,7 +623,7 @@ If you are using Python to implement your driver you may reuse some common modul
 <p>For example, you could start by implementing the following endpoints in the first iteration:</p>
 <ul>
 <li>Well-Known Document: <code>GET /.well-known/openeo</code></li>
-<li>Capabilities: <code>GET /</code> and <code>GET /output_formats</code></li>
+<li>Capabilities: <code>GET /</code> and <code>GET /file_formats</code></li>
 <li>Data discovery: <code>GET /collections</code> and <code>GET /collections/{collection_id}</code></li>
 <li>Process discovery: <code>GET /processes</code></li>
 <li>Data processing: <code>POST /result</code></li>
