--- a/draft/guidelines-clients/index.html
+++ b/draft/guidelines-clients/index.html
@@ -1047,7 +1047,7 @@
 </tr>
 <tr>
 <td>List the supported output file formats.</td>
-<td><code>GET /output_formats</code></td>
+<td><code>GET /file_formats</code></td>
 <td><code>listFileTypes()</code></td>
 </tr>
 <tr>
