Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/collections/index.html
+++ b/draft/collections/index.html
@@ -836,6 +836,11 @@ Therefore, it is very likely that further changes and adjustments will be made i
 <td>For all DOI names specified, the respective DOI links SHOULD be added to the links section of the catalog with the <code>rel</code> type <code>cite-as</code>.</td>
 <td>Collections</td>
 </tr>
+<tr>
+<td><code>successor-version</code></td>
+<td>If a process or collection is deprecated, a link with this type can point to the successor of the process of collection.</td>
+<td>Collections +Processes</td>
+</tr>
 </tbody>
 </table>
 <p>More relation types may be listed in the STAC documentation.</p>
