Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/changelog/index.html
+++ b/draft/changelog/index.html
@@ -1008,6 +1008,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>If <code>currency</code> returned by <code>GET /</code> is <code>null</code>, <code>costs</code> and <code>budget</code> are unsupported. <code>costs</code> and <code>budget</code> fields in various endpoints can be set to <code>null</code> (default).</li>
 <li>The default type for Process Graph Variables is not <code>string</code>, but no specific (any) data type. Default values can be of any type.</li>
 <li>Official support for <a href="https://spec.commonmark.org/0.29/changes.html">CommonMark 0.29 instead of CommonMark 0.28</a>. <a href="https://github.com/Open-EO/openeo-api/issues/203">#203</a></li>
+<li>The parameter <code>user_id</code> has been removed from the endpoints to manage user files (<code>/files/{user_id}</code>). <a href="https://github.com/Open-EO/openeo-api/issues/218">#218</a></li>
 <li><code>GET /collections</code> and <code>GET /collections/{collectionId}</code>: Updated STAC to version 0.8.1. <a href="https://github.com/Open-EO/openeo-api/issues/185">#185</a>, <a href="https://github.com/Open-EO/openeo-api/issues/204">#204</a>.</li>
 <li><code>GET /credentials/oidc</code>: Changed response to support multiple OpenID Connect identity providers (<a href="https://github.com/Open-EO/openeo-api/issues/201">#201</a>) and clarified workflow overall.</li>
 <li>Bearer token are built from the authentication method, an optional provider id and the token itself. <a href="https://github.com/Open-EO/openeo-api/issues/219">#219</a></li>
