--- a/draft/guidelines-clients/index.html
+++ b/draft/guidelines-clients/index.html
@@ -989,13 +989,13 @@
 </tr>
 <tr>
 <td>Lists all files from a user. Returns a list of <code>File</code>.</td>
-<td><code>GET /files/{user_id}</code></td>
-<td><code>listFiles(?userId)</code></td>
+<td><code>GET /files</code></td>
+<td><code>listFiles()</code></td>
 </tr>
 <tr>
 <td>Opens a (existing or non-existing) file without reading any information. Returns a <code>File</code>.</td>
 <td><em>None</em></td>
-<td><code>openFile(path, ?userId)</code></td>
+<td><code>openFile(path)</code></td>
 </tr>
 <tr>
 <td>Validates a process graph.</td>
@@ -1129,17 +1129,17 @@
 <tbody>
 <tr>
 <td>Download a user file.</td>
-<td><code>GET /files/{user_id}/{path}</code></td>
+<td><code>GET /files/{path}</code></td>
 <td><code>downloadFile(target)</code></td>
 </tr>
 <tr>
 <td>Upload a user file.</td>
-<td><code>PUT /files/{user_id}/{path}</code></td>
+<td><code>PUT /files/{path}</code></td>
 <td><code>uploadFile(source)</code></td>
 </tr>
 <tr>
 <td>Delete a user file.</td>
-<td><code>DELETE /files/{user_id}/{path}</code></td>
+<td><code>DELETE /files/{path}</code></td>
 <td><code>deleteFile()</code></td>
 </tr>
 </tbody>
